# gezellig

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: audio.rs  dj_publisher.rs  lib.rs  librespot_pipeline.rs  livekit_room.rs  main.rs  room.rs  settings.rs  shared_queue_webhook.rs  voice_chat.rs  youtube_pipeline.rs
src-tauri/src/archive/: librespot_pipeline.rs  test_discovery.rs
src/routes/: +page.svelte
tests/acceptance/: app.spec.ts  audio-controls.spec.ts  dj-controls.spec.ts  first-launch.spec.ts  fixtures.ts  join-leave.spec.ts  notifications.spec.ts  presence.spec.ts  settings.spec.ts
