[package]
name = "gezellig"
version = "0.0.11"
description = "A virtual office app with presence, audio rooms, and YouTube DJ"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gezellig_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.97"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
rusty_ytdl = "0.7"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
async-trait = "0.1"
rodio = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
cpal = "0.15.3"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
http = "1.1.0"

[dev-dependencies]
tempfile = "3"
